--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,13 @@
   <head>
     <title>logbook</title>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../../node_modules/react/cjs/react.development.js"></script>
+    <script src="../../node_modules/react-dom/cjs/react-dom.development.js"></script>
   </head>
   <body>
+    <p>Hello, World.</p>
     <script>src="index.js"</script>
   </body>
 </html>
