--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,7 @@
   <body class="container">
     <h1 class="jumbotron text-center display-3"><span class="text-danger">LOG</span><span class="text-primary">BOOK</span></h1>
     <div id="app"></div>
+    <script src="./js/components/login.js"></script>
     <script src="./js/components/compose.js"></script>
     <script src="./js/components/logview.js"></script>
     <script src="./js/components/app.js"></script>
